# python-glesys

./: .gitignore  README.md  glesys.toml.example  pyproject.toml
.github/workflows/: python-publish.yml
glesys/: __init__.py  __main__.py  configuration.py  exceptions.py  helpers.py  output.py  session.py  workers.py
glesys/api/: __init__.py  dns.py  ip.py  server.py
glesys/cli/: args.py  args_router.py  ip.py  server.py
glesys/cli/arguments/: dns.py  ip.py  letsencrypt.py  server.py
glesys/dns/: cli_handler.py
glesys/hooks/letsencrypt/: __init__.py  cli_handler.py
glesys/models/: configuration.py
