[build-system]
requires = ["setuptools>=67.5"]
build-backend = "setuptools.build_meta"

[project]
name = "glesys"
dynamic = ["version"]
description = "A SDK/helper library to work with Glesys API."
authors = [
    {name = "Anton Hvornum", email = "anton@hvornum.se"},
]
license = {text = "AGPL-1.0-or-later"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  #'jwcrypto',
  #'pyjwt',
  "pydantic",
  'toml' # This can be removed in 3.11+
]

keywords = ["linux", "glesys", "server", "oauth2", "openid", "connect"]

classifiers = [
    "Programming Language :: Python :: 3.10",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Home = "https://api.glesys.com/"
Documentation = "https://glesys.se/kb/artikel/api-dokumentation"
Source = "https://github.com/Torxed/python-glesys"

[project.optional-dependencies]
doc = [
    "sphinx",
    "sphinx_rtd_theme"
]
letsencrypt = [
    "acme>=0.29.0",
    "certbot>=0.34.0",
    "zope"
]

[project.scripts]
glesys = "glesys:run_as_a_module"

[project.entry-points."certbot.plugins"]
dns-glesys = "glesys.hooks.letsencrypt:Authenticator"

[options]
package_dir="glesys"
include_package_data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["glesys*"]

[options.packages.find]
where="glesys"

[options.package_data]
glesys = "*.py"

[tool.setuptools.dynamic]
version = {attr = "glesys.__version__"}

[tool.mypy]
python_version = "3.10"
exclude = "tests"

[tool.bandit]
targets = ["glesys"]
exclude = ["/tests"]
